--- a/styles.css
+++ b/styles.css
@@ -51,13 +51,9 @@ ul{
 }
 
 .text-container{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     width: 30%;
     padding-left: 175px;
     margin-top: 75px;
-    padding-bottom: 100px;
 }
 
 h1.main-text{
@@ -77,12 +73,12 @@ p.small-text{
     border-radius: 4px;
 }
 
-.image-1{
+.image{
     background-color: grey;
-    display: flex;
     color: white;
-}
-
-div.main-container .image-1{
-    display: flex;
+    height: 230px;
+    width: 450px;
+    position: relative; left: 575px; bottom: 240px;
+    text-align: center; 
+    line-height: 215px;
 }
