--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     margin: 0;
+    padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -11,76 +17,77 @@ a{
 ul{
     list-style-type: none;
     display: flex;
-    gap: 18px;
+    gap: 24px;
 }
-
 .section-one{
     background-color: #1f2937;
-
+    padding-left: 175px;
+    padding-right: 175px;
+    padding-top: 10px;
 }
 
 .header{
     display: flex;
-    justify-content: space-between;
 }
 
-.left-logo{
-    display: flex;
+.left-header{
     color: #f9faf8;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    padding-left: 175px;
-}
-.right-logo{
     display: flex;
-    padding-right: 175px;
-    color: #e5e7eb;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.right-header{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    padding-left: 1000px ;
     font-size: 18px;
+    color: #e5e7eb;
 }
 
 .hero-container{
+    margin-top: 100px;
+    display: flex;
+
+    height: 250px;
+    justify-content: space-between;
+}
+
+.hero-text{
     display: flex;
     flex-direction: column;
-    margin-top: 50px;
-    height: 375px;
+    width: 28%;
 }
 
-.hero{
-    margin-left: 175px;
-    margin-right: 830px;
-}
-.hero h1{
+.hero-text h1{
     font-size: 48px;
-    color: #f9faf8;
     font-weight: bolder;
+    color: #f9faf8;
 }
 
-.hero p{
+.hero-text p1{
     font-size: 18px;
     color: #e5e7eb;
-    margin: 0;
     font-weight: lighter;
-    display: flex;
 }
-.button{
-    color:white;
-    background-color:#3882f6;
+
+.button-one{
+    color: white;
+    background-color: #3882f6;
     border-radius: 5px;
-    border: none;
     width: 100px;
     height: 25px;
-    margin-left: 175px;
     margin-top: 10px;
+    border: none;
 }
 
-.image-container{
-    width: 450px;
-    height: 650px;
-    margin-bottom: 75px;
-    background-color: green;
+.placeholder{
+    background-color: grey;
+    display: flex;
+    color: white;
+    width: 45%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
-
-
-
-
