--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ ul{
     padding-left: 175px;
     padding-right: 175px;
     padding-top: 10px;
+    padding-bottom: 100px;
 }
 
 .header{
@@ -66,7 +67,7 @@ ul{
     color: #f9faf8;
 }
 
-.hero-text p1{
+.hero-text p{
     font-size: 18px;
     color: #e5e7eb;
     font-weight: lighter;
