--- a/styles.css
+++ b/styles.css
@@ -92,3 +92,51 @@ ul{
     align-items: center;
     justify-content: center;
 }
+
+.section-two{
+    padding-left: 175px;
+    padding-right: 175px;
+    padding-top: 10px;
+    height: 600px;
+}
+
+.hero-container-two h1{
+    text-align: center;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    padding: 50px;
+}
+
+.box-container{
+    display: flex;
+    gap: 86px;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.info-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    text-align: center;
+}
+
+.button-two{
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+    background: transparent;
+    color: #3882f6;
+    border-color: #3882f6;
+    border-style: solid;
+    border-width: 3px;
+    
+}
+
+.text{
+    color: #1f2937;
+}
+
