--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ ul{
 }
 .section-one{
     background-color: #1f2937;
-    padding-left: 155px;
+    padding-left: 180px;
     padding-right: 155px;
     padding-top: 10px;
     padding-bottom: 100px;
@@ -50,7 +50,6 @@ ul{
 .hero-container{
     margin-top: 100px;
     display: flex;
-
     height: 250px;
     justify-content: space-between;
 }
@@ -138,5 +137,25 @@ ul{
 
 .text{
     color: #1f2937;
+}
+
+.section-three{
+    background-color: #e5e7eb;
+    height: 500px;
+    padding-left: 555px;
+    padding-right: 555px;
+}
+
+.quote{
+    font-size: 36px;
+    padding-top: 150px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1f2937;
+}
+
+.author{
+    font-size: 36px;
+    text-align: end;
 }
 
